# EXP_Tesseract_Scan

./: .gitignore  README.md  cleanup_dict.sh  dict.txt  obrada.py  pyproject.toml  state.yml  strip_extra.sh  text.yml
